[tool.poetry]
name = "solid-goggles"
version = "0.1.0"
description = ""
authors = ["magda <magdalena.surowka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.1.0"
nltk = "^3.4.5"
matplotlib = "^3.2.1"
numpy = "^1.18.2"
ipykernel = "^5.2.0"
pillow = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
